# docs_harvester

./: .gitignore  LICENSE.MD  README.md  doc_harvester.py  docs_harvester_cache.sqlite  fetch_github_docs.sh  github_doc_fetcher.py  pyproject.toml  requirements.txt  run_harvester.sh  setup.sh  test-functional.sh
github_docs/ollama_ollama_docs/: ollama_ollama_docs_docs.json  ollama_ollama_docs_docs.pdf.html
github_docs_scraper/: README.md  fetch_ollama_docs.sh  github_doc_fetcher.py
scripts/: fetch_github_docs.sh  run_harvester.sh
src/docs_harvester/: __init__.py  cli.py  github_cli.py  github_fetcher.py  harvester.py  http.py
tests/: __init__.py  test_harvester.py
