[project]
name = "docs-harvester"
version = "1.0.0"
description = "Documentation harvester for LLM context ingestion. Built before MCP existed."
readme = "README.md"
license = { text = "Proprietary - See LICENSE.MD" }
requires-python = ">=3.10"
authors = [
    { name = "Kaxo Technologies", email = "tech@kaxo.io" }
]
keywords = ["documentation", "llm", "pdf", "scraper", "ai", "context"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "weasyprint>=60.0",
    "markdown>=3.5.0",
    "lxml>=5.0.0",
    "requests-cache>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "types-requests>=2.31.0",
    "types-beautifulsoup4>=4.12.0",
    "types-Markdown>=3.5.0",
]

[project.scripts]
docs-harvester = "docs_harvester.cli:main"
github-docs = "docs_harvester.github_cli:main"

[project.urls]
Homepage = "https://kaxo.io"
Repository = "https://github.com/kaxo-io/docs_harvester"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docs_harvester"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["docs_harvester"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["weasyprint.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
